# colab-research-cli

./: README.md  pyproject.toml
src/colab_research_cli/: cli.py
